Fix: [SRM-14345]: Fix onboarding metric graph if total metric is 0 (#45532)
* Fix: [SRM-14345]: Fix onboarding metric graph if total metric is 0

* Fix: [SRM-14345]: Fix onboarding metric graph if total metric is 0